--- a/res/xml/device_settings.xml
+++ b/res/xml/device_settings.xml
@@ -17,7 +17,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:title="@string/battery_summary">
+        android:title="@string/USB_summary">
 
         <SwitchPreference
             android:key="fast_charge"
@@ -78,16 +78,6 @@
                     android:targetPackage="com.magicxavi.settings.device"
                     android:targetClass="com.magicxavi.settings.device.DisplayCalibration" />
         </Preference>
-
-        <Preference
-            android:key="device_doze"
-            android:persistent="false"
-            android:title="@string/device_doze_title" >
-            <intent android:action="android.intent.action.MAIN"
-                 android:targetPackage="org.lineageos.settings.doze"
-                 android:targetClass="org.lineageos.settings.doze.DozeSettingsActivity"/>
-        </Preference>
-
 
     </PreferenceCategory>
 
