--- a/res/xml/preferences_advanced_controls.xml
+++ b/res/xml/preferences_advanced_controls.xml
@@ -94,6 +94,20 @@
             android:summary="%s"
             android:title="@string/dirac_preset_title"
             android:icon="@drawable/ic_preset" />
+
+        <com.magicxavi.settings.device.preferences.SecureSettingCustomSeekBarPreference
+            android:defaultValue="4"
+            android:key="headphone_gain"
+            android:max="15"
+            app:min="-40"
+            android:title="@string/headphone_gain" />
+
+        <com.magicxavi.settings.device.preferences.SecureSettingCustomSeekBarPreference
+            android:defaultValue="0"
+            android:key="microphone_gain"
+            android:max="15"
+            app:min="-10"
+            android:title="@string/microphone_gain" />
     </PreferenceCategory>
 
     <PreferenceCategory
