--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -30,6 +30,15 @@
         <item>4</item>
     </string-array>
 
+    <string-array name="navbar_profiles">
+        <item>@string/navbar_enabled</item>
+        <item>@string/navbar_disabled</item>
+    </string-array>
+    <string-array name="navbar_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- kcal -->
     <array name="preset_enteries">
         <item>@string/preset_default</item>
