--- a/overlay/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay/lineage-sdk/lineage/res/res/values/config.xml
@@ -85,4 +85,11 @@
     <!-- Whether device has a notch -->
     <bool name="config_haveNotch">false</bool>
 
+    <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
+    <bool name="config_cleanupUnusedFingerprints">false</bool>
+
+    <!-- Whether to post reset runnable for all clients. Needed for some older
+         vendor fingerprint HAL implementations. -->
+    <bool name="config_fingerprintPostResetRunnableForAllClients">true</bool>
+
 </resources>
