--- a/res/xml/preferences_advanced_controls.xml
+++ b/res/xml/preferences_advanced_controls.xml
@@ -49,6 +49,14 @@
             android:summary="@string/dt2w_summary"
             android:title="@string/dt2w_title"
             android:icon="@drawable/ic_dt2w" />
+            
+        <com.magicxavi.settings.device.preferences.SecureSettingCustomSeekBarPreference
+            android:defaultValue="40"
+            android:key="buttons_brightness_gain"
+            android:max="40"
+            app:min="0"
+            android:icon="@drawable/ic_torch"
+            android:title="@string/buttons_brightness_gain" />
     </PreferenceCategory>
 
     <PreferenceCategory
